# shadow-client

./: .gitignore  README.md  auth.py  client.py  fabric.py  jdk.py  jvm.py  mods.py  mojang.py  run.bat
.claude/: bake-skins.sh  render-chat-mockup.sh  settings.json
.github/workflows/: deploy-website.yml  release-launcher.yml  release-shadow-chat.yml
branding/: build_mod.py  fps_install.py  install_resourcepacks.py  modmenu_config.json  tune_configs.py
branding/hud_mod/: build.py  fabric.mod.json  render_preview.py  render_preview_v2.py
branding/hud_mod/resources/: shadowhud.mixins.json
branding/hud_mod/src/shadowhud/: ShadowHud.java
branding/hud_mod/src/shadowhud/mixin/: EntityRenderDispatcherCosmeticMixin.java  GlintHideMixin.java  HotbarFadeMixin.java  MinecraftClientProbeMixin.java  MouseMixin.java  SwordVisualMixin.java
branding/hud_mod/stubs/net/minecraft/: class_11659.java  class_1297.java  class_1309.java  class_1799.java  class_332.java  class_4587.java  class_4597.java  class_811.java  class_9779.java
chat-relay/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
chat-relay/src/: auth.ts  chat-room.ts  index.ts  presence.ts  types.ts
launcher/: .gitignore  README.md  package.json
launcher/src/: index.html  main.js  styles.css
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/capabilities/: default.json
launcher/src-tauri/src/: auth.rs  fabric.rs  jdk.rs  jvm.rs  lib.rs  main.rs  mc_servers.rs  mods.rs  mojang.rs  presence.rs  resource_packs.rs  server_ping.rs  setup.rs  shadow_chat.rs
shadow-chat/: .gitignore  build.gradle  gradle.properties  settings.gradle
shadow-chat/src/main/java/app/shadowclient/chat/: ShadowChatClient.java
shadow-chat/src/main/java/app/shadowclient/chat/cmd/: CoordsHelper.java
shadow-chat/src/main/java/app/shadowclient/chat/config/: AuthConfig.java  (+1 more)
shadow-chat/src/main/resources/: fabric.mod.json
website/: README.md  index.html  styles.css
(+12 files in other folders)
