[package]
name = "shadow-client-launcher"
version = "0.2.14"
description = "Shadow Client launcher"
authors = ["Edison"]
license = "All Rights Reserved"
edition = "2021"

[lib]
name = "shadow_client_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# Tauri's custom-protocol feature is needed for production builds
custom-protocol = ["tauri/custom-protocol"]
